set classes to individual files

--- a/MTCollatz/bin/.gitignore
+++ b/MTCollatz/bin/.gitignore
@@ -3,4 +3,11 @@
 /MTCollatz$1threadRunner.class
 /MTCollatz.class
 /ReadMe.txt
+/histogram.xlsx
+/myresults.txt
 /results.csv
+/DataSet.class
+/DataSetHelper.class
+/ThreadRunner.class
+/threadRunner.class
+/MTCollatzPackage/
